--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,62 @@
-/* You can add global styles to this file, and also import other style files */
+@use "tailwindcss";
+@use '@fortawesome/fontawesome-free/css/all.min.css';
+
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+button {
+    border-radius: 10px;
+    cursor: pointer;
+
+    -webkit-box-shadow: 0px 4px 10px -3px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 4px 10px -3px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 4px 10px -3px rgba(0, 0, 0, 0.75);
+}
+
+.primaryButton {
+    background-color: #008000;
+    color: white;
+    flex: 1;
+    font-size: 1rem;
+    height: 2.5rem;
+    text-align: center;
+}
+
+.primaryButton:hover {
+    background-color: #469536;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.primaryButton i {
+    margin-right: 10px;
+}
+
+.secondaryButton {
+    background-color: #CC5500;
+    color: white;
+    flex: 1;
+    font-size: 1.1rem;
+    height: 2.5rem;
+    padding-inline: 2%;
+    text-align: center;
+}
+
+.secondaryButton:hover {
+    background-color: #ff9500;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.secondaryButton i {
+    margin-right: 10px;
+}
