--- a/src/app/features/components/hero-detail/hero-detail.component.html
+++ b/src/app/features/components/hero-detail/hero-detail.component.html
@@ -5,6 +5,8 @@
       <button class="secondaryButton w-[70%]" (click)="goBack()">
         <i class="fa-solid fa-arrow-left"></i>
         CAMBIO 1
+
+        Volver atras CAMBIO 3
       </button>
     </div>
 
