Cambio botón en rama1

--- a/src/app/features/components/hero-detail/hero-detail.component.html
+++ b/src/app/features/components/hero-detail/hero-detail.component.html
@@ -4,9 +4,7 @@
     <div class="sm:w-[20%] w-[40%]">
       <button class="secondaryButton w-[70%]" (click)="goBack()">
         <i class="fa-solid fa-arrow-left"></i>
-        CAMBIO 2
-
-        Volver atras CAMBIO 1
+        Regresar - RAMA 1
       </button>
     </div>
 
