--- a/src/app/features/components/hero-detail/hero-detail.component.html
+++ b/src/app/features/components/hero-detail/hero-detail.component.html
@@ -7,6 +7,11 @@
         Volver Atrás - RAMA 2
         Regresar - RAMA 1
       </button>
+
+      <button class="secondaryButton w-[70%]" (click)="goBack()">
+        <i class="fa-solid fa-arrow-left"></i>
+          MI NUEVO BOTON
+      </button>
     </div>
 
     <div class="heroName">
