Se agrega boton console 9 y 42

--- a/src/app/features/components/hero-detail/hero-detail.component.html
+++ b/src/app/features/components/hero-detail/hero-detail.component.html
@@ -9,7 +9,12 @@
 
       <button class="secondaryButton w-[70%]" (click)="goBack()">
         <i class="fa-solid fa-arrow-left"></i>
-          MI NUEVO BOTON PLATFORM
+          MI NUEVO BOTON console
+      </button>
+
+      <button class="secondaryButton w-[70%]" (click)="goBack()">
+        <i class="fa-solid fa-arrow-left"></i>
+          BOTON PLATFORM
       </button>
     </div>
 
