--- a/src/app/features/components/hero-detail/hero-detail.component.html
+++ b/src/app/features/components/hero-detail/hero-detail.component.html
@@ -9,7 +9,8 @@
 
       <button class="secondaryButton w-[70%]" (click)="goBack()">
         <i class="fa-solid fa-arrow-left"></i>
-          MI NUEVO BOTON 2
+        MI BOTON Platform
+        <i class="fa-solid fa-arrow-left"></i>
       </button>
     </div>
 
