--- a/src/app/features/components/hero-detail/hero-detail.component.html
+++ b/src/app/features/components/hero-detail/hero-detail.component.html
@@ -9,7 +9,7 @@
 
       <button class="secondaryButton w-[70%]" (click)="goBack()">
         <i class="fa-solid fa-arrow-left"></i>
-        MI BOTON Platform
+        Mi botón Platform
         <i class="fa-solid fa-arrow-left"></i>
       </button>
     </div>
