--- a/src/app/features/components/hero-detail/hero-detail.component.html
+++ b/src/app/features/components/hero-detail/hero-detail.component.html
@@ -10,13 +10,11 @@
       <button class="secondaryButton w-[70%]" (click)="goBack()">
         <i class="fa-solid fa-arrow-left"></i>
         Mi botón Platform
-        <i class="fa-solid fa-arrow-left"></i>
-          MI NUEVO BOTON console
       </button>
 
       <button class="secondaryButton w-[70%]" (click)="goBack()">
         <i class="fa-solid fa-arrow-left"></i>
-          BOTON PLATFORM
+          BOTON Console
       </button>
     </div>
 
