--- a/src/app/features/components/hero-detail/hero-detail.component.html
+++ b/src/app/features/components/hero-detail/hero-detail.component.html
@@ -4,7 +4,7 @@
     <div class="sm:w-[20%] w-[40%]">
       <button class="secondaryButton w-[70%]" (click)="goBack()">
         <i class="fa-solid fa-arrow-left"></i>
-        Regresar - RAMA 1 nueva modificacion desde la rama platform
+        Regresar atrás
       </button>
 
       <button class="secondaryButton w-[70%]" (click)="goBack()">
